check_output_3.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter/Cargo.toml
workspace: /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/Cargo.toml
    Checking meme-hunter v0.1.0 (/mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter)
error[E0133]: call to unsafe function `AccountInfo::owner` is unsafe and requires unsafe function or block
   --> programs/meme-hunter/src/lib.rs:174:8
    |
174 |     if session_pda.owner() != program_id {
    |        ^^^^^^^^^^^^^^^^^^^ call to unsafe function
    |
    = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `AccountInfo::owner` is unsafe and requires unsafe function or block
   --> programs/meme-hunter/src/lib.rs:211:8
    |
211 |     if session_pda.owner() != program_id {
    |        ^^^^^^^^^^^^^^^^^^^ call to unsafe function
    |
    = note: consult the function's documentation for information on how to avoid undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `meme-hunter` (lib) due to 2 previous errors
